tests/typing/bad/testfile-no_return1-1.scala
class A { def m() : Int = { } }
object Main { def main(args: Array[String]) { } }
